# rust-kaon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.github/workflows/: README.md  cron-daily-fuzz.yml  rust.yml
api/bitcoin/: all-features.txt  default-features.txt  no-features.txt
api/hashes/: all-features.txt  alloc-only.txt  no-features.txt
api/io/: all-features.txt  alloc-only.txt  no-features.txt
api/units/: all-features.txt  alloc-only.txt  no-features.txt
base58/: CHANGELOG.md  Cargo.toml  README.md
base58/src/: lib.rs
bitcoin/examples/: ecdsa-psbt-simple.rs  sighash.rs  sign-tx-segwit-v0.rs  sign-tx-taproot.rs  taproot-psbt-simple.rs
bitcoin/src/: bip152.rs  bip158.rs  bip32.rs  hash_types.rs  internal_macros.rs  network.rs  policy.rs  pow.rs  serde_utils.rs  sign_message.rs
bitcoin/tests/: psbt-sign-taproot.rs  serde.rs  serde_opcodes.rs
contrib/: check-for-api-changes.sh  crates.sh  release.sh  test_vars.sh
fuzz/: Cargo.toml  README.md  generate-files.sh
hashes/: Cargo.toml  README.md
hashes/embedded/: Cargo.toml
hashes/src/: hash160.rs  hmac.rs  impls.rs  lib.rs  sha256d.rs  sha256t.rs  util.rs
hashes/tests/: regression.rs
internals/: Cargo.toml  README.md
internals/src/: lib.rs  macros.rs
internals/src/error/: input_string.rs  parse_error.rs
io/: Cargo.toml  README.md
io/src/: lib.rs
kaon/: Cargo.toml
kaon/embedded/: Cargo.toml
kaon/examples/: bip32.rs  ecdsa-psbt.rs  handshake.rs  sign-tx-taproot.rs  taproot-psbt-simple.rs  (+1 more)
logo/: README.md
units/: Cargo.toml  README.md
(+86 files in other folders)
