[workspace]
members = ["kaon", "hashes", "internals", "fuzz", "io", "units", "base58"]
resolver = "2"

[patch.crates-io.base58ck]
path = "base58"

[patch.crates-io.kaon]
path = "kaon"

[patch.crates-io.kaon_hashes]
path = "hashes"

[patch.crates-io.kaon-internals]
path = "internals"

[patch.crates-io.kaon-io]
path = "io"

[patch.crates-io.kaon-units]
path = "units"
