[package]
name = "kaon-internals"
version = "0.3.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "The Rust Bitcoin developers", "Kaon Team <info@kaon.one>"]
license = "CC0-1.0"
repository = "https://github.com/akropolisio/rust-kaon/"
documentation = "https://docs.rs/kaon-internals"
description = "Internal types and macros used by rust-kaon ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["internal"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]

[features]
default = []
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.103", default-features = false, optional = true }

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(rust_v_1_64)', 'cfg(rust_v_1_61)'] }
